[Cocoa] Draw fonts at their native sizes instead of scaling a 1pt font https://bugs.webkit.org/show_bug.cgi?id=146045

Reviewed by Darin Adler.

In his WWDC talk[1], Antonio Cavedoni describes how painting a font at a particular point size
may yield different visual results than painting a font at a 1pt size into a scaled context.
However, this is something that we currently do in WebKit. This patch migrates from this
behavior to instead drawing text at the appropriate point size.

[1] https://developer.apple.com/videos/wwdc/2015/?id=804

* platform/graphics/cocoa/FontCascadeCocoa.mm:
(WebCore::FontCascade::drawGlyphs):

Canonical link: https://commits.webkit.org/166674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189087 268f45cc-cd09-0410-ab3c-d52691b4dbfc